<resources>
    <string name="app_name">First Notification Manager App</string>
    <string name="all">All</string>
    <string name="per_hour">Per Hour</string>
    <string name="per_day">Per Day</string>
    <string name="per_month">Per Month</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="there_is_no_notifications">There\'s no notifications yet</string>
    <string name="filterAction">Filter</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="notification_listener_service">Notification Listener Service</string>
    <string name="notification_listener_service_expplanation">This app requires you to allow Notification Listener Service to work properly</string>
    <string name="notification_foreground_service">Channel where the foreground service is displayed</string>
    <string name="notification_explanation">Channel where app notifications about amount of recorded notifications come.</string>
    <string name="notifications_recorded">%s notifications recorded</string>
    <string name="recording_notifications">Recording your notificaitons</string>
    <string name="app_icon">App icon</string>
</resources>