<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/filter_shape"
    android:orientation="vertical"
    android:outlineProvider="background"
    android:padding="@dimen/radio_button_padding">

    <RadioGroup
        android:id="@+id/filterGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/filterAll"
            style="@style/SecondaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_button_margin"
            android:button="@drawable/custom_radio_pulp"
            android:paddingStart="@dimen/radio_button_text_padding"
            android:paddingEnd="0dp"
            android:text="@string/all" />

        <RadioButton
            android:id="@+id/filterHour"
            style="@style/SecondaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_button_margin"
            android:button="@drawable/custom_radio_pulp"
            android:paddingStart="@dimen/radio_button_text_padding"
            android:paddingEnd="0dp"
            android:text="@string/per_hour" />

        <RadioButton
            android:id="@+id/filterDay"
            style="@style/SecondaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_button_margin"
            android:button="@drawable/custom_radio_pulp"
            android:paddingStart="@dimen/radio_button_text_padding"
            android:paddingEnd="0dp"
            android:text="@string/per_day" />

        <RadioButton
            android:id="@+id/filterMonth"
            style="@style/SecondaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_button_margin"
            android:button="@drawable/custom_radio_pulp"
            android:paddingStart="@dimen/radio_button_text_padding"
            android:paddingEnd="0dp"
            android:text="@string/per_month" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>