<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextAppearance="@style/ToolbarTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/activity_menu"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name" />

    <ImageView
        android:id="@+id/noNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_no_notifications"
        app:layout_constraintBottom_toTopOf="@id/serviceToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/noNotificationsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:text="@string/there_is_no_notifications"
        android:textSize="@dimen/secondary_text_size"
        android:textColor="@color/textNoNotifications"
        app:layout_constraintEnd_toEndOf="@id/noNotifications"
        app:layout_constraintStart_toStartOf="@id/noNotifications"
        app:layout_constraintTop_toBottomOf="@+id/noNotifications" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/serviceToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:listitem="@layout/item_notification" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/noNotificationGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:constraint_referenced_ids="noNotifications, noNotificationsText" />

    <Button
        android:id="@+id/serviceToggleButton"
        style="@style/ButtonTextStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/button_margin_side"
        android:layout_marginEnd="@dimen/button_margin_side"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/buttonInactive"
        android:elevation="30dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>